# radar-shmu

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  Dockerfile  README.md  STORAGE_STRATEGY.md  docker-compose.yml  performance_analyzer.py  pyproject.toml  radar_processor.py  requirements.txt  requirements_multi.txt  sample_data.json  setup_git.sh  simple_demo.py  test_merge_functionality.py
.archive/: analyze_dwd_radar.py  analyze_single_file.py  dwd_shmu_comparison_analysis.md
.archive/docs-old/: DOCKER_DEPLOYMENT.md  LOCAL_TESTING.md  MONITORING.md  OPTIMIZATION_SUMMARY.md
.archive/old_implementation/: create_all_overlays.py  create_webmap_overlays.py  download_known_timestamps.py  download_latest_available.py  download_shmu_data.py  process_downloaded_hdf.py  process_latest_data.py  process_mercator_overlays.py  simple_demo.py
.github/: .deployment-test
.github/workflows/: docker-publish.yml
config/: extent_index.json
docs/: architecture.md  cli-reference.md  data-flow.md  deployment.md  development.md  memory-profiling-results.md  monitoring.md
processed/: README.md  frontend_index.json  radar_pabv_20250904141500_sample.json  radar_panv_20250904141500_sample.json  radar_pasv_20250904141500_sample.json
scripts/: analyze_radar_history.py  benchmark_avif.sh  create_production_merged.py  docker-push.sh  download_matching_data.py  generate_animations.py  generate_availability_report.sh  generate_colorbar.py  generate_production_indexes.py  install-hooks.sh  profile_memory.py  release.sh  run-radar-scheduler.sh  run_analysis_docker.sh  run_composite_docker_loop.sh  run_composite_loop.sh  run_memory_profile_suite.sh  test-memory-optimization.sh
scripts/hooks/: commit-msg  pre-commit  pre-push
src/imeteo_radar/: __init__.py  cli.py  cli_composite.py
src/imeteo_radar/config/: extent_index.json  shmu_colormap.py  sources.py
src/imeteo_radar/core/: alerts.py  base.py  logging.py  projection.py  projections.py  retry.py
src/imeteo_radar/processing/: animator.py  compositor.py  coverage_mask.py  exporter.py  merged_products.py  merger.py  reprojector.py  transform_cache.py
src/imeteo_radar/sources/: arso.py  chmi.py  dwd.py  imgw.py  omsz.py  shmu.py
src/imeteo_radar/utils/: cli_helpers.py  extent_loader.py  hdf5_utils.py  mask_loader.py  parallel_download.py  processed_cache.py  spaces_uploader.py  storage.py  timestamps.py
src/radar_shmu/: cli.py
src/radar_shmu/config/: shmu_colormap.py
src/radar_shmu/core/: base.py  projection.py
src/radar_shmu/processing/: animator.py  exporter.py  merger.py
src/radar_shmu/sources/: dwd.py  shmu.py
src/radar_shmu/utils/: storage.py
tests/: test_alerts.py  test_cli_helpers.py  test_colormap.py  test_imgw.py  test_integration.py  test_logging.py  test_outage_detection.py  test_processed_cache.py  test_projections.py  test_retry.py  test_sources.py
